--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,44 @@
-/* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+body {
+    background-image: url('assets/707401.jpg');
+    z-index: -2;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+section {
+    @apply pt-4;
+    @apply pl-4;
+    @apply pr-4;
+    @apply h-full;
+}
+
+.textSmaller {
+    font-size: small;
+}
+
+img.fiftyRadius {
+    border-radius: 50%;
+}
+
+h1 {
+    @apply font-semibold;
+    @apply text-blue-400;
+    @apply mb-2;
+    @apply mt-2;
+}
+
+label {
+    @apply font-semibold;
+}
+
+li:hover,
+div.hyperlink:hover {
+    @apply cursor-pointer;
+    @apply text-blue-400;
+    @apply text-base;
+}
