--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-<div class="container">
-
+<div class="container" *ngIf="!displayLandingScapePage; else onPhoneAdvice">
 
     <div class="h-full">
 
@@ -45,7 +44,7 @@
                 <div class="h-12 flex justify-center items-center border-gray-300 border-b">
                     <span class="font-semibold text-sm">{{bigTitles.curriculum}}</span>
                 </div>
-                <div class="h-full bg-white overflow-hidden rounded-br-lg pl-10">
+                <div class="h-full bg-white overflow-hidden rounded-br-lg">
 
                     <section #aboutMe>
                         <!-- ABOUT ME SECTION  -->
@@ -68,7 +67,15 @@
 
 
     </div>
-
-
-
 </div>
+
+<ng-template #onPhoneAdvice>
+    <div class="flex items-center h-full">
+
+        <div class="h-1/3 w-full bg-gray-50 opacity-80 m-auto flex flex-col justify-center items-center">
+            <h1 class="text-lg banner">The site is currently unaivalable on this format. </h1>
+            <h1 class=" text-lg banner">Please visit us on a Desktop.</h1>
+        </div>
+    </div>
+
+</ng-template>
