--- a/src/styles.css
+++ b/src/styles.css
@@ -8,12 +8,12 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    height: 100vh;
+    width: 100vw;
 }
 
 section {
-    @apply pt-4;
-    @apply pl-4;
-    @apply pr-4;
+    @apply p-10;
     @apply h-full;
 }
 
