feat: adding technologies images

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -68,7 +68,7 @@
                         {{bigTitles.experiences}}
                     </section>
                     <section #skills>
-                        {{bigTitles.skills}}
+                        <app-skills></app-skills>
                     </section>
                     <section #hobbies>
                         {{bigTitles.hobbies}}
