feat: replace images by svg ones

--- a/src/app/section/skills/skills.component.html
+++ b/src/app/section/skills/skills.component.html
@@ -1,14 +1,13 @@
 <div class="flex flex-wrap h-full w-full skill justify-between">
-    <img src="../assets/technologies/angular.png" />
-    <img src="../assets/technologies/flutter.png" />
-    <img src="../assets/technologies/gitlab.png" />
-    <img src="../assets/technologies/intellij.png" />
-    <img src="../assets/technologies/mongodb.png" />
-    <img src="../assets/technologies/ngrx.png" />
-    <img src="../assets/technologies/node.png" />
-    <img src="../assets/technologies/oracle.png" />
-    <img src="../assets/technologies/sonarqube.png" />
-    <img src="../assets/technologies/spring.png" />
+    <img src="../assets/technologies/sonarqube.svg" />
+    <img src="../assets/technologies/angular.svg" />
+    <img src="../assets/technologies/oracle.svg" />
+    <img src="../assets/technologies/nodeJs.svg" />
+    <img src="../assets/technologies/flutter.svg" />
+    <img src="../assets/technologies/int.svg" />
+    <img src="../assets/technologies/mongo.svg" />
+    <img src="../assets/technologies/ngrx.svg" />
+    <img src="../assets/technologies/spring.svg" />
     <img src="../assets/technologies/tailwind.png" />
     <img src="../assets/technologies/vse.png" />
 </div>
