--- a/src/app/section/skills/skills.component.html
+++ b/src/app/section/skills/skills.component.html
@@ -12,67 +12,103 @@
     <img src="../assets/technologies/vse.png" />
 </div> -->
 
-<div class="border-r w-1/2 h-4/5 flex flex-col justify-between">
 
-    <div class="flex items-center justify-center">
-        <h1>Top RANK stack </h1>
-        <fa-icon [icon]="icons.trophy" class="text-yellow-400 px-2"></fa-icon>
-    </div>
 
-    <div class="w-full">
-        <div class="flex justify-around items-center header">
-            <img src="../assets/technologies/angular.svg" />
-            <div>
-                <h1 class="text-blue-400 text-center w-full">Angular</h1>
-                <div class="text-center">
-                    <fa-icon class="px-1 text-yellow-400" *ngFor="let star of generateStars(4);" [icon]="icons.star">
-                    </fa-icon>
-                    <fa-icon class="px-1 " *ngFor="let star of generateStars(1);" [icon]="icons.star"></fa-icon>
+<div class="flex">
+    <div class="border-r w-1/2 h-4/5 flex flex-col justify-between">
+
+        <div class="flex items-center justify-center">
+            <h1>Top RANK stack </h1>
+            <fa-icon [icon]="icons.trophy" class="text-yellow-400 px-2"></fa-icon>
+        </div>
+
+        <div class="w-full">
+            <div class="flex justify-around items-center header">
+                <img src="../assets/technologies/angular.svg" />
+                <div>
+                    <h1 class="text-blue-400 text-center w-full">Angular</h1>
+                    <div class="text-center">
+                        <fa-icon class="px-1 text-yellow-400" *ngFor="let star of generateStars(4);" [icon]="icons.star">
+                        </fa-icon>
+                        <fa-icon class="px-1 " *ngFor="let star of generateStars(1);" [icon]="icons.star"></fa-icon>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <div class="w-full">
-        <div class="flex justify-around items-center header">
-            <img src="../assets/technologies/flutter.svg" />
-            <div>
-                <h1 class="text-blue-400 text-center w-full">Flutter</h1>
-                <div class="text-center">
-                    <fa-icon class="px-1 text-yellow-400" *ngFor="let star of generateStars(4);" [icon]="icons.star">
-                    </fa-icon>
-                    <fa-icon class="px-1 " *ngFor="let star of generateStars(1);" [icon]="icons.star"></fa-icon>
+        <div class="w-full">
+            <div class="flex justify-around items-center header">
+                <img src="../assets/technologies/flutter.svg" />
+                <div>
+                    <h1 class="text-blue-400 text-center w-full">Flutter</h1>
+                    <div class="text-center">
+                        <fa-icon class="px-1 text-yellow-400" *ngFor="let star of generateStars(4);" [icon]="icons.star">
+                        </fa-icon>
+                        <fa-icon class="px-1 " *ngFor="let star of generateStars(1);" [icon]="icons.star"></fa-icon>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <div class="w-full">
-        <div class="flex justify-around items-center header">
-            <img src="../assets/technologies/ngrx.svg" />
-            <div>
-                <h1 class="text-blue-400 text-center w-full">Ngrx</h1>
-                <div class="text-center">
-                    <fa-icon class="px-1 text-yellow-400" *ngFor="let star of generateStars(3);" [icon]="icons.star">
-                    </fa-icon>
-                    <fa-icon class="px-1 " *ngFor="let star of generateStars(2);" [icon]="icons.star"></fa-icon>
+        <div class="w-full">
+            <div class="flex justify-around items-center header">
+                <img src="../assets/technologies/ngrx.svg" />
+                <div>
+                    <h1 class="text-blue-400 text-center w-full">Ngrx</h1>
+                    <div class="text-center">
+                        <fa-icon class="px-1 text-yellow-400" *ngFor="let star of generateStars(3);" [icon]="icons.star">
+                        </fa-icon>
+                        <fa-icon class="px-1 " *ngFor="let star of generateStars(2);" [icon]="icons.star"></fa-icon>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <div class="w-full">
-        <div class="flex justify-around items-center header">
-            <img src="../assets/technologies/nodeJs.svg" />
-            <div>
-                <h1 class="text-blue-400 text-center w-full">Node JS</h1>
-                <div class="text-center">
-                    <fa-icon class="px-1 text-yellow-400" *ngFor="let star of generateStars(3);" [icon]="icons.star">
-                    </fa-icon>
-                    <fa-icon class="px-1 " *ngFor="let star of generateStars(2);" [icon]="icons.star"></fa-icon>
+        <div class="w-full">
+            <div class="flex justify-around items-center header">
+                <img src="../assets/technologies/nodeJs.svg" />
+                <div>
+                    <h1 class="text-blue-400 text-center w-full">Node JS</h1>
+                    <div class="text-center">
+                        <fa-icon class="px-1 text-yellow-400" *ngFor="let star of generateStars(3);" [icon]="icons.star">
+                        </fa-icon>
+                        <fa-icon class="px-1 " *ngFor="let star of generateStars(2);" [icon]="icons.star"></fa-icon>
+                    </div>
                 </div>
             </div>
         </div>
+
     </div>
 
+    <div class="px-4 w-1/2">
+        <h1 class="text-blue-400">My Wallet</h1>
+        <div id="sk">
+            <label>Database </label><br />
+            <span>Oracle, MongoCloud, MongoDb</span>
+        </div>
+        <div id="sk">
+            <label>Object Relationnal Mapping </label>
+            <span>Mybatis, Hibernate</span>
+        </div>
+        <div id="sk">
+            <label>FrontEnd Stack:</label><br />
+            <span>Angular JS, Angular2+, Typescript, Javascript, HTML 5, CSS3, Tailwind, Material, Bootstrap</span>
+        </div>
+        <div id="sk">
+            <label>Open Source Version Control</label><br />
+            <span>Github, Gitlab, BitBucket</span>
+        </div>
+        <div id="sk">
+            <label>Integration</label><br />
+            <span>Gitlab-CI, Jenkins, Jenkins2, Sonarqube, Docker </span>
+        </div>
+        <div id="sk">
+            <label>Backend</label><br />
+            <span>NodeJs(+Express), JAVA, Spring, Springboot, C, C++, Jacoco, Junit, FlywayDB</span>
+        </div>
+        <div id="sk">
+            <label>Mobile </label><br />
+            <span>Flutter, Swift, SwiftUI</span>
+        </div>
+    </div>
 </div>
