--- a/src/app/section/skills/skills.component.html
+++ b/src/app/section/skills/skills.component.html
@@ -81,7 +81,9 @@
     </div>
 
     <div class="px-4 w-1/2">
-        <h1 class="text-blue-400">My Wallet</h1>
+        <h1 class="text-blue-400">My Wallet
+            <fa-icon class="text-yellow-800 px-2" [icon]="icons.wallet"></fa-icon>
+        </h1>
         <div id="sk">
             <label>Database </label><br />
             <span>Oracle, MongoCloud, MongoDb</span>
