--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -71,7 +71,7 @@
                         <app-skills></app-skills>
                     </section>
                     <section #hobbies>
-                        {{bigTitles.hobbies}}
+                        <app-hobbies></app-hobbies>
                     </section>
                 </div>
 
