--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -61,11 +61,10 @@
                 <!-- BODY -->
                 <div class="h-full bg-white overflow-hidden rounded-br-lg opacity-95">
                     <section #aboutMe>
-                        <!-- ABOUT ME SECTION  -->
                         <app-about-me></app-about-me>
                     </section>
                     <section #experiences>
-                        {{bigTitles.experiences}}
+                        <app-experience></app-experience>
                     </section>
                     <section #skills>
                         <app-skills></app-skills>
