details about me

--- a/src/app/hobbies/hobbies.component.html
+++ b/src/app/hobbies/hobbies.component.html
@@ -2,13 +2,21 @@
     <h1 class="text-blue-400 text-2xl mb-6">Gallery
         <fa-icon [icon]="icons.cameraRetro"></fa-icon>
     </h1>
-    <div class="grid grid-cols-3 gap-4 h-full">
-        <div><img src="../assets/technologies/int.svg"></div>
-        <div><img src="../assets/technologies/int.svg"></div>
-        <div><img src="../assets/technologies/int.svg"></div>
-        <div><img src="../assets/technologies/int.svg"></div>
-        <div><img src="../assets/technologies/int.svg"></div>
-        <div><img src="../assets/technologies/int.svg"></div>
-        <div><img src="../assets/technologies/int.svg"></div>
+    <div class="grid grid-cols-3 gap-1 h-full overflow-scroll overflow-x-hidden">
+        <div><img src="../assets/photo/2.jpg"></div>
+        <div><img src="../assets/photo/3.jpg"></div>
+        <div><img src="../assets/photo/4.jpg"></div>
+        <div><img src="../assets/photo/5.jpg"></div>
+        <div><img src="../assets/photo/6.jpg"></div>
+        <div><img src="../assets/photo/7.jpg"></div>
+        <div><img src="../assets/photo/8.jpg"></div>
+        <div><img src="../assets/photo/9.jpg"></div>
+        <div><img src="../assets/photo/10.jpg"></div>
+        <div><img src="../assets/photo/11.jpg"></div>
+        <div><img src="../assets/photo/12.jpg"></div>
+        <div><img src="../assets/photo/13.jpg"></div>
+        <div><img src="../assets/photo/15.jpg"></div>
+        <div><img src="../assets/photo/16.jpg"></div>
+        <div><img src="../assets/photo/17.jpg"></div>
     </div>
 </div>
