--- a/src/app/section/about-me/about-me.component.html
+++ b/src/app/section/about-me/about-me.component.html
@@ -1,7 +1,22 @@
 <div class="flex flex-col justify-around h-full">
 
-    <div class="flex">
-
+    <div>
+        <div id="bella">
+            <div>
+                <label>Diploma</label><br />
+                <label>Location</label><br />
+                <label>Contact</label><br />
+                <label>T.O.E.I.C</label><br />
+                <label>Driving Licence </label><br />
+            </div>
+            <div>
+                <p>Polytech Lille Engineering School</p>
+                <p>Lille - France</p>
+                <p>alexis.ebrard@kaleo-it.fr</p>
+                <p>890</p>
+                <p>Yes </p>
+            </div>
+        </div>
         <!-- QuestionMarKS Section -->
         <div>
             <div class="w-full">
@@ -52,8 +67,6 @@
                 </div>
             </div>
         </div>
-
-        <img class="m-auto" src="../assets/me_twin_cat.jpg" width="150" alt="Me and my beloved friend" />
     </div>
 
 
