--- a/src/app/section/skills/skills.component.html
+++ b/src/app/section/skills/skills.component.html
@@ -14,15 +14,15 @@
 
 
 
-<div class="flex">
-    <div class="border-r w-1/2 h-4/5 flex flex-col justify-between">
+<div class="flex h-full">
+    <div class="border-r w-1/2 h-full flex flex-col justify-around">
 
         <div class="flex items-center justify-center">
             <h1>Top RANK stack </h1>
             <fa-icon [icon]="icons.trophy" class="text-yellow-400 px-2"></fa-icon>
         </div>
 
-        <div class="w-full">
+        <div>
             <div class="flex justify-around items-center header">
                 <img src="../assets/technologies/angular.svg" />
                 <div>
@@ -80,7 +80,7 @@
 
     </div>
 
-    <div class="px-4 w-1/2">
+    <div class="px-4 w-1/2 flex flex-col justify-around">
         <h1 class="text-blue-400">My Wallet
             <fa-icon class="text-yellow-800 px-2" [icon]="icons.wallet"></fa-icon>
         </h1>
